Fix the overflowing div in footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 .footer-container {
   background-color: #000;
-  padding: 0.3em 0;
+  padding: 0;
 }
 
 .top-footer {
